# rsylla

./: .gitignore  .pre-commit-config.yaml  BENCHMARKS.md  COMPLETE_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_INDEX.md  LICENSE  Makefile  QUICKSTART.md  README.md  TEST_SUMMARY.md  benchmark_results.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  run_tests.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  docs.yml  lint.yml  test.yml
benchmark/: BENCHMARK_RESULTS_EXAMPLE.md  QUICKSTART.md  README.md  rsylla_benchmark.py  run_all_benchmarks.py  setup_schema.py
docs/: README.md
docs/api/: batch.md  query.md  results.md  session.md
docs/examples/: advanced-patterns.md
docs/guides/: best-practices.md  data-types.md
docs/tutorials/: getting-started.md
examples/: advanced_configuration.py  basic_usage.py  batch_operations.py  prepared_statements.py
python/rscylla/: __init__.py  __init__.pyi
python/rsylla/: __init__.py  __init__.pyi
src/: batch.rs  error.rs  lib.rs  query.rs  result.rs  session.rs  types.rs
tests/: README.md  __init__.py  conftest.py  test_batch.py  test_datatypes.py  test_prepared.py  test_query.py  test_results.py  test_session.py
