[package]
name = "rsylla"
version = "0.1.1"
edition = "2021"

[lib]
name = "rsylla"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py311"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
scylla = "1.4.1"
tokio = { version = "1.48", features = ["full"] }
futures = "0.3.31"
uuid = { version = "1.18", features = ["v4"] }
chrono = "0.4.42"
num-bigint = "0.4.6"
